build/log/idf_py_stderr_output_530599
Command: make -j 14 all
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/process.c: In function 'DSP_process':
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/process.c:59:9: error: implicit declaration of function 'dsps_fft2r_init_q15'; did you mean 'dsps_fft2r_init_sc16'? [-Wimplicit-function-declaration]
   59 |         dsps_fft2r_init_q15(NULL, FFT_SIZE);
      |         ^~~~~~~~~~~~~~~~~~~
      |         dsps_fft2r_init_sc16
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/process.c:63:5: error: implicit declaration of function 'dsps_fft2r_q15'; did you mean 'dsps_fft2r_sc16'? [-Wimplicit-function-declaration]
   63 |     dsps_fft2r_q15(input, FFT_SIZE);
      |     ^~~~~~~~~~~~~~
      |     dsps_fft2r_sc16
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/process.c:64:5: error: implicit declaration of function 'dsps_bit_rev_q15'; did you mean 'dsps_bit_rev_fc32'? [-Wimplicit-function-declaration]
   64 |     dsps_bit_rev_q15(input, FFT_SIZE);
      |     ^~~~~~~~~~~~~~~~
      |     dsps_bit_rev_fc32
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/process.c:56:21: warning: variable 'fft_buffer' set but not used [-Wunused-but-set-variable]
   56 |     static int16_t *fft_buffer;
      |                     ^~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:180: esp-idf/main/CMakeFiles/__idf_main.dir/process.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6314: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:130: all] Error 2
